[gd_scene load_steps=7 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/player/item_thinkers/teleporter/teleporter_thinker.gd" type="Script" id=2]
[ext_resource path="res://UI/cursors/cursor_teleporter.png" type="Texture" id=3]
[ext_resource path="res://Entities/Item_Pickups/teleporter/teleporter.png" type="Texture" id=4]
[ext_resource path="res://Components/sound_player/sound/sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/player/item_thinkers/teleporter/teleport.wav" type="AudioStream" id=6]

[node name="teleporter_thinker" type="Node"]
script = ExtResource( 2 )
HELD_ITEM_TEXTURE = ExtResource( 4 )
my_item = "teleporter"
display_name = "teleporter"
CURSOR = ExtResource( 3 )
CURSOR_MODE = 1
tele_distance = 75
telefrag_radius = 0.5

[node name="sound_player" parent="." instance=ExtResource( 1 )]

[node name="sound" parent="sound_player" instance=ExtResource( 5 )]
stream = ExtResource( 6 )
bus = "Master"
MODE = 1
AUTO_PLAY = false

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="telefrag_window" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="telefrag_window" to="." method="_on_telefrag_window_timeout"]
